Reduced description in config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: QA Chatbot with Facebook bAbi Dataset - WAI Ireland
 logo: WAI logo only.png
-description: Blog post that desecribes the work done on the QA Chatbot for WaiLearn August 2020 Edition.
+description: QA Chatbot for WaiLearn August 2020 Edition.
 theme: jekyll-theme-minimal
