--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: QA Chatbot with Facebook bAbi Dataset - WAI Ireland
+title: WaiPRACTICE
 logo: WAI logo only.png
-description: QA Chatbot for WaiLearn August 2020 Edition.
+description: WaiPRACTICE August 2020
 theme: jekyll-theme-minimal
